@@ -45,8 +45,8 @@ def rm_f(*files)
     targets.concat Dir[file]
   end
   if not targets.empty?
-    File::chmod 0777, *targets
-    File::unlink *targets
+    File::chmod(0777, *targets)
+    File::unlink(*targets)
   end
 end
 
@@ -468,7 +468,7 @@ TARGET = #{target}
 DLLIB = $(TARGET).#{$static ? $LIBEXT : "@DLEXT@"}
 
 RUBY = #{ruby_interpreter} -I$(topdir) -I$(hdrdir)/lib
-RM = $(RUBY) -r ftools -e "File::rm_f(*Dir[ARGV.join(' ')])"
+RM = $(RUBY) -rftools -e 'File::rm_f(*ARGV.map{|x|Dir[x]}.flatten.uniq)'
 
 EXEEXT = @EXEEXT@
 
