@@ -1,3 +1,7 @@
+Mon Jul  9 16:49:30 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
+
+	* ext/extmk.rb.in: modify RM macro.
+
 Sun Jul  8 20:54:19 2001  Akinori MUSHA  <knu@iDaemons.org>
 
 	* ruby.h: fix a wrong function name: rb_iglob() -> rb_globi().
